# ST0204

./: CMakeLists.txt  README.md  toolchain.cmake  toolchain_vgdb.cmake
Inc/: main.h  ml_i2c.h  stm32l4xx_hal_conf.h
Src/: main.c  ml_i2c.c  ml_pfpn.c  ml_spi.c  ml_tim.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c
obsolete/: ml_i2c.c
